# codewars

./: .gitignore  Cargo.toml  Pipfile  README.md
haskell/: does_my_number_look_big_in_this.hs  mumbling.hs  nearest_square.hs  ten_minute_walk.hs  testing.hs  two_to_one.hs
python/: become_immortal.py  clustering_corrupted_banks.py  crack_the_pins.py  decode_the_qr_code.py  n_queens_general.py  n_queens_problem_no_mandatory_position.py  n_queens_puzzle_one_mandatory_position.py  n_queens_puzzle_one_mandatory_position_challenge.py  password_hashes.py  real_password_cracker.py  regex_for_binary_nums_divisible_by_n.py  simpler_interactive_interpreter.py  ten_minute_walk.py
rust/: array_dot_diff.rs  assembler_interpreter.rs  assembler_interpreter_part2.rs  become_immortal.rs  crack_the_pin.rs  decode_the_morse_code.rs  decode_the_morse_code_advanced.rs  descending_order.rs  error_correction_no1_hamming.rs  evaluate_math_expressions.rs  evaluate_postfix_expression.rs  integer_depth.rs  interactive_interpreter.rs  is_a_number_prime.rs  ones_and_zeros.rs  playing_with_digits.rs  split_strings.rs  take_a_number_and_sum_its_digits_raised_to_the_consecutive_powers_and_eureka.rs  two_sum.rs
